// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer Groups inserting 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "children": Array [
            LayoutMixinStub {
              "children": Array [
                ExportMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 1,
                        "g": 0.32941176470588235,
                        "r": 0,
                      },
                      "opacity": 1,
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "id": "1:2",
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#0054ff\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                  "x": 0,
                  "y": 0,
                },
              ],
              "height": 100,
              "id": "1:4",
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{}",
              },
              "type": "GROUP",
              "width": 200,
              "x": 0,
              "y": 0,
            },
            LayoutMixinStub {
              "children": Array [
                ExportMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 0.09019607843137255,
                        "g": 0,
                        "r": 1,
                      },
                      "opacity": 1,
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "id": "2:10",
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff0017\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                  "x": 0,
                  "y": 0,
                },
              ],
              "height": 100,
              "id": "2:12",
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{}",
              },
              "type": "GROUP",
              "width": 200,
              "x": 0,
              "y": 100,
            },
            LayoutMixinStub {
              "children": Array [
                ExportMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 0,
                        "g": 1,
                        "r": 0.07058823529411765,
                      },
                      "opacity": 1,
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "id": "1:5",
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                  "x": 0,
                  "y": 0,
                },
              ],
              "height": 100,
              "id": "1:7",
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{}",
              },
              "type": "GROUP",
              "width": 200,
              "x": 0,
              "y": 200,
            },
          ],
          "height": 300,
          "id": "1:8",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "FRAME",
          "width": 200,
          "x": 0,
          "y": 0,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Svg hydration 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [
        LayoutMixinStub {
          "children": Array [
            LayoutMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 0,
                    "g": 1,
                    "r": 0,
                  },
                  "type": "SOLID",
                },
              ],
              "parent": [Circular],
              "type": "RECTANGLE",
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
            "svgHash": "-2021876873",
          },
          "type": "FRAME",
        },
      ],
      "parent": [Circular],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer Svg instance updating 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "children": Array [
            ExportMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 0,
                    "g": 1,
                    "r": 0,
                  },
                  "type": "SOLID",
                },
              ],
              "id": "2:5",
              "parent": [Circular],
              "type": "RECTANGLE",
            },
          ],
          "id": "1:3",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
            "svgHash": "-2021876873",
          },
          "type": "FRAME",
          "x": 0,
          "y": 0,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Svg render 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "children": Array [
            ExportMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 1,
                    "g": 0,
                    "r": 0,
                  },
                  "type": "SOLID",
                },
              ],
              "id": "1:2",
              "parent": [Circular],
              "type": "RECTANGLE",
            },
          ],
          "id": "1:3",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
            "svgHash": "820074599",
          },
          "type": "FRAME",
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Text characters applied 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "_characters": "some text",
          "_textAutoResize": "WIDTH_AND_HEIGHT",
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "TEXT",
          "x": 0,
          "y": 0,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Text component supported text instance children 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "_characters": "Some text",
          "_textAutoResize": "WIDTH_AND_HEIGHT",
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "TEXT",
          "x": 0,
          "y": 0,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Text component supported text instance children 2`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "_characters": "Some text",
          "_textAutoResize": "WIDTH_AND_HEIGHT",
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "TEXT",
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Text instance hydration 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "_characters": "Some text 2",
          "_textAutoResize": "WIDTH_AND_HEIGHT",
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "TEXT",
          "x": 0,
          "y": 0,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Text instance hydration 2`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "_characters": "Some text",
          "_textAutoResize": "WIDTH_AND_HEIGHT",
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "TEXT",
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Text instance updating 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "_characters": "text 2",
          "_textAutoResize": "WIDTH_AND_HEIGHT",
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "TEXT",
          "x": 0,
          "y": 0,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer Text with custom font applied 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "_characters": "some text",
          "_fontName": Object {
            "family": "Helvetica",
            "style": "Bold",
          },
          "_textAutoResize": "WIDTH_AND_HEIGHT",
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"fontFamily\\":\\"Helvetica\\",\\"fontWeight\\":\\"bold\\"}",
          },
          "type": "TEXT",
          "x": 0,
          "y": 0,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer createComponent basic 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [
        ChildrenMixinStub {
          "children": Array [
            LayoutMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 0,
                    "g": 1,
                    "r": 0.07058823529411765,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                },
              ],
              "height": 100,
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
              },
              "type": "RECTANGLE",
              "width": 200,
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "COMPONENT",
        },
        BaseNodeMixinStub {
          "children": Array [
            LayoutMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 0,
                    "g": 1,
                    "r": 0.07058823529411765,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                },
              ],
              "height": 100,
              "parent": ChildrenMixinStub {
                "children": Array [
                  [Circular],
                ],
                "parent": [Circular],
                "pluginData": Object {
                  "isReactFigmaNode": "true",
                  "reactStyle": "{}",
                },
                "type": "COMPONENT",
              },
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
              },
              "type": "RECTANGLE",
              "width": 200,
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "INSTANCE",
        },
      ],
      "parent": [Circular],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer createComponent hydration 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [
        ChildrenMixinStub {
          "children": Array [
            LayoutMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 1,
                    "g": 0.3176470588235294,
                    "r": 0,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                },
              ],
              "height": 100,
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#0051ff\\"}",
              },
              "type": "RECTANGLE",
              "width": 200,
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "COMPONENT",
        },
        BaseNodeMixinStub {
          "children": Array [
            LayoutMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 1,
                    "g": 0.3176470588235294,
                    "r": 0,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                },
              ],
              "height": 100,
              "parent": ChildrenMixinStub {
                "children": Array [
                  [Circular],
                ],
                "parent": [Circular],
                "pluginData": Object {
                  "isReactFigmaNode": "true",
                  "reactStyle": "{}",
                },
                "type": "COMPONENT",
              },
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#0051ff\\"}",
              },
              "type": "RECTANGLE",
              "width": 200,
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "INSTANCE",
        },
      ],
      "parent": [Circular],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer createComponent overriding 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [
        ChildrenMixinStub {
          "children": Array [
            LayoutMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 1,
                    "g": 0,
                    "r": 0,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                },
              ],
              "height": 100,
              "name": "rect",
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{\\"backgroundColor\\":\\"#0000ff\\"}",
              },
              "type": "RECTANGLE",
              "width": 200,
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "COMPONENT",
        },
        BaseNodeMixinStub {
          "children": Array [
            LayoutMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 1,
                    "g": 0,
                    "r": 0,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                },
              ],
              "height": 100,
              "name": "rect",
              "parent": ChildrenMixinStub {
                "children": Array [
                  [Circular],
                ],
                "parent": [Circular],
                "pluginData": Object {
                  "isReactFigmaNode": "true",
                  "reactStyle": "{}",
                },
                "type": "COMPONENT",
              },
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{\\"backgroundColor\\":\\"#0000ff\\"}",
              },
              "type": "RECTANGLE",
              "width": 200,
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "INSTANCE",
        },
      ],
      "parent": [Circular],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer creates nested groups 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        LayoutMixinStub {
          "children": Array [
            LayoutMixinStub {
              "children": Array [
                ExportMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 0,
                        "g": 1,
                        "r": 0.07058823529411765,
                      },
                      "opacity": 1,
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "id": "1:2",
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                },
              ],
              "id": "1:4",
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{}",
              },
              "type": "GROUP",
            },
            LayoutMixinStub {
              "children": Array [
                ExportMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 0,
                        "g": 1,
                        "r": 0.07058823529411765,
                      },
                      "opacity": 1,
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "id": "1:5",
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                },
                ExportMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 0,
                        "g": 1,
                        "r": 0.07058823529411765,
                      },
                      "opacity": 1,
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "id": "1:6",
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                },
              ],
              "id": "1:8",
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{}",
              },
              "type": "GROUP",
            },
          ],
          "id": "1:10",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "GROUP",
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer creates single group 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        LayoutMixinStub {
          "children": Array [
            ExportMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 0,
                    "g": 1,
                    "r": 0.07058823529411765,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                },
              ],
              "height": 100,
              "id": "1:2",
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
              },
              "type": "RECTANGLE",
              "width": 200,
            },
          ],
          "id": "1:4",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{}",
          },
          "type": "GROUP",
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer insert new component between 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 1,
                "g": 0.35294117647058826,
                "r": 0,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:3",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#005aff\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "2:5",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer mark page isCurrent=false 1`] = `
ExportMixinStub {
  "children": Array [],
  "id": "0:1",
  "parent": ChildrenMixinStub {
    "children": Array [
      [Circular],
    ],
    "id": "0:0",
    "type": "DOCUMENT",
  },
  "type": "PAGE",
}
`;

exports[`renderer mark page isCurrent=true 1`] = `
ExportMixinStub {
  "children": Array [],
  "id": "0:1",
  "parent": ChildrenMixinStub {
    "children": Array [
      [Circular],
    ],
    "id": "0:0",
    "type": "DOCUMENT",
  },
  "type": "PAGE",
}
`;

exports[`renderer remove component between (equal components) 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 1,
                "g": 0.2823529411764706,
                "r": 0,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#0048ff\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:3",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer remove component between 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:4",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer render single component 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer rerender single component 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer text instance without Text component (with hydration page) 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "2:3",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "2:4",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;

exports[`renderer text instance without Text component 1`] = `
ChildrenMixinStub {
  "children": Array [
    ExportMixinStub {
      "children": Array [],
      "id": "0:1",
      "parent": [Circular],
      "type": "PAGE",
    },
    ExportMixinStub {
      "children": Array [
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:2",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        ExportMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 100,
          "id": "1:3",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "id": "1:1",
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{}",
      },
      "type": "PAGE",
    },
  ],
  "id": "0:0",
  "type": "DOCUMENT",
}
`;
